--- a/package.json
+++ b/package.json
@@ -50,9 +50,11 @@
     "@ckeditor/ckeditor5-typing": "^36.0.0"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-basic-styles": "^36.0.0",
     "@ckeditor/ckeditor5-core": "^36.0.0",
     "@ckeditor/ckeditor5-dev-translations": "^33.0.0",
     "@ckeditor/ckeditor5-dev-utils": "^33.0.0",
+    "@ckeditor/ckeditor5-font": "^36.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^36.0.0",
     "css-loader": "^5.2.7",
     "postcss-loader": "^4.3.0",
