--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@ckeditor/ckeditor5-media-embed": "^36.0.0",
     "@ckeditor/ckeditor5-paragraph": "^36.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^36.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^36.0.0",
     "@ckeditor/ckeditor5-table": "^36.0.0",
     "@ckeditor/ckeditor5-typing": "^36.0.0"
   },
