--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@ckeditor/ckeditor5-easy-image": "^36.0.0",
     "@ckeditor/ckeditor5-editor-classic": "^36.0.0",
     "@ckeditor/ckeditor5-essentials": "^36.0.0",
+    "@ckeditor/ckeditor5-font": "^36.0.0",
     "@ckeditor/ckeditor5-heading": "^36.0.0",
     "@ckeditor/ckeditor5-image": "^36.0.0",
     "@ckeditor/ckeditor5-indent": "^36.0.0",
@@ -45,6 +46,7 @@
     "@ckeditor/ckeditor5-media-embed": "^36.0.0",
     "@ckeditor/ckeditor5-paragraph": "^36.0.0",
     "@ckeditor/ckeditor5-paste-from-office": "^36.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^36.0.0",
     "@ckeditor/ckeditor5-table": "^36.0.0",
     "@ckeditor/ckeditor5-typing": "^36.0.0"
   },
